# Qway-qubes-repo

./: Readme.md  fedora-qbs.cfg
compiz-plugins-extra/: compiz-plugins-extra.spec
compiz-plugins-main/: compiz-plugins-main.spec
compiz-qubes/: 0001-force-qubes-decoration.patch  0002-decor-minimal-window.patch  0003-title-center-alignment.patch  0004-force-qubes-vm-name-to-title.patch  0005-allow-stubdom-fullscreen.patch  compiz-qubes.spec
kernel-gvt/: config-gvt  gvt-backport-add-some-regs-to-force-to-nonpriv-whitelist.patch  gvt-xengt-2019y-11m-04d-10h-42m-58s.patch  gvt-xengt-topic-5.4-fix.patch  kernel-gvt.spec  usbip-backport-fix-calling-usb-hcd-giveback-urb-with-irqs.patch  usbip-tweak-clear-halt-with-simple-reset.patch  xengt-staging-4.19.patch
libcompizconfig/: libcompizconfig.spec
libvirt/: libvirt.spec  libxl-add-support-for-xengt-video.patch
qemu-qubes/: qemu-qubes-4.2.0-add-vgt-support.patch  qemu-qubes.spec
qubes-gui-daemon/: 0001-mkwindow.patch  0001-pacat-register-callbacks-on-stream-ready.patch  0002-event-configure.patch  0003-fullscreen-stubdomain-window.patch  0004-fix-indentation.patch  qubes-gui-daemon.spec
qubes-utils/: qubes-utils-generate-own-uuid.patch  qubes-utils-identify-by-ids.patch  qubes-utils.spec
qubes-windows-tools/: Makefile  README.md  devcon-headers.patch  diskpart.ps1  pkihelper.c  preparation.bat  qnetwork_setup.bat  qrexec-store-separator-to-fix-relative-path-construct.patch  qubes-core-agent-windows-mingw-fragments.patch  qubes-core-agent-windows-warn-incompat-proto.patch  qubes-core-qubesdb-mingw-fragments.patch  qubes-core-vchan-xen-mingw-fragments.patch  qubes-gui-agent-windows-destroy.patch  qubes-gui-agent-windows-mingw-fragments.patch  qubes-gui-agent-windows-watchdog-disable-session-change.patch  qubes-installer-qubes-os-windows-tools-mingw-fragments.patch  qubes-tools-combined.wxs  qubes-vmm-xen-win-pvdrivers-xeniface-mingw.patch  qubes-vmm-xen-windows-pvdrivers-mingw-fragments.patch  qubes-windows-tools.spec  qubes-windows-utils-mingw-fragments.patch  qubesdb-daemon-win32-fix.patch  qwt-appexeclink.patch  qwt-chkstk.patch  qwt-gui-agent-cpu-usage.patch  qwt-wait-for-process.patch
xen/: 0007-hypercall-XENMEM_get_mfn_from_pfn.patch  gvt-g-hvmloader.patch  libxl-add-gvt-options.patch  libxl-init-gvt.patch  patch-libxl-cleanup-remaining-backend-xs-dirs-after-driver.patch  xen.spec
xen-hvm-stubdom-linux/: gui-agent-configure-message-acknowledge.patch  module-vchan-sink.c  pulseaudio-run-system-instance-workaround.patch  qemu-stub-xengt-support.patch  qubes-stubdom-add-pulseaudio.patch  xen-hvm-stubdom-linux.spec
xorg-dummy-egl/: xf86-qubes-common.c  xf86-qubes-common.h  xorg-dummy-add-xrandr-support.patch  xorg-dummy-change-driver-name.patch  xorg-dummy-egl.spec  xorg-dummy-glamor-qubes-support.patch  xorg-dummy-glamor.patch  xorg-dummy-qubes-gui-share-pixmaps.patch  xorg-dummy-qubes-template-add-glamor.patch  xorg-qubes.conf.template
xorg-modesetting-qbs/: Makefile.am  configure.ac  xorg-modesetting-add-qubes-shm-support.patch  xorg-modesetting-qbs.spec  xorg-qubes.conf.template
